syntax = "proto3";

package user;

option go_package = "compiled/user";
import "google/protobuf/timestamp.proto";

service User {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
  rpc UsernameExists(UsernameExistsRequest) returns (UsernameExistsResponse) {}
  rpc GetUsernameByUserId(GetUsernameByUserIdRequest) returns (GetUsernameByUserIdResponse) {}
  rpc GetUserIdByUsername(GetUserIdByUsernameRequest) returns (GetUserIdByUsernameResponse) {}
  rpc IsPasswordCorrect(IsPasswordCorrectRequest) returns (IsPasswordCorrectResponse) {}
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse) {}
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse) {}
  rpc GetFullProfile(GetFullProfileRequest) returns (GetFullProfileResponse) {}
  rpc ChangeUsername(ChangeUsernameRequest) returns (ChangeUsernameResponse) {}
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {}
  rpc AddEmail(AddEmailRequest) returns (AddEmailResponse) {}
  rpc DeleteEmail(DeleteEmailRequest) returns (DeleteEmailResponse) {}
  rpc SendVerificationEmail(SendVerificationEmailRequest) returns (SendVerificationEmailResponse) {}
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse) {}
  rpc GetPrimaryEmail(GetPrimaryEmailRequest) returns (GetPrimaryEmailResponse) {}
  rpc GetActiveEmails(GetActiveEmailsRequest) returns (GetActiveEmailsResponse) {}
  rpc ChangePrimaryEmail(ChangePrimaryEmailRequest) returns (ChangePrimaryEmailResponse) {}
  rpc GetPhoneNumber(GetPhoneNumberRequest) returns (GetPhoneNumberResponse) {}
  rpc ChangePhoneNumber(ChangePhoneNumberRequest) returns (ChangePhoneNumberResponse) {}
  rpc SendVerificationSMS(SendVerificationSMSRequest) returns (SendVerificationSMSResponse) {}
  rpc VerifyPhoneNumber(VerifyPhoneNumberRequest) returns (VerifyPhoneNumberResponse) {}
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse) {}
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message SignUpRequest {
  string username = 1;
  string first_name = 2;
  string last_name = 3;
  string password = 4;
  string email = 5;
  string phone_number = 6;
  optional google.protobuf.Timestamp birthdate = 7;
}

message SignUpResponse {
  uint32 code = 1;
  string message = 2;
}

message IsPasswordCorrectRequest {
  string username = 1;
  string password = 2;
}

message IsPasswordCorrectResponse {
  uint32 code = 1;
  string message = 2;
  string user_id = 3;
}

message UsernameExistsRequest {
  string username = 1;
}

message UsernameExistsResponse {
  uint32 code = 1;
  string message = 2;
  bool exists = 3;
}

message GetUsernameByUserIdRequest {
  string user_id = 1;
}

message GetUsernameByUserIdResponse {
  uint32 code = 1;
  string message = 2;
  string username = 3;
}

message GetUserIdByUsernameRequest {
  string username = 1;
}

message GetUserIdByUsernameResponse {
  uint32 code = 1;
  string message = 2;
  string user_id = 3;
}

message UpdateProfileRequest {
  optional string first_name = 1;
  optional string last_name = 2;
  optional google.protobuf.Timestamp birthdate = 4;
}

message UpdateProfileResponse {
  uint32 code = 1;
  string message = 2;
}

message GetProfileRequest {
  string user_id = 1;
}

message GetProfileResponse {
  uint32 code = 1;
  string message = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  google.protobuf.Timestamp birthdate = 6;
}

message GetFullProfileRequest {
  string user_id = 1;
}

message GetFullProfileResponse {
  uint32 code = 1;
  string message = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  repeated string emails = 6;
  string phone_number = 7;
  google.protobuf.Timestamp birthdate = 8;
}

message ChangeUsernameRequest {
  string username = 1;
}

message ChangeUsernameResponse {
  uint32 code = 1;
  string message = 2;
}

message ChangePasswordRequest {
  string old_password = 1;
  string new_password = 2;
}

message ChangePasswordResponse {
  uint32 code = 1;
  string message = 2;
}

message AddEmailRequest {
  string email = 1;
}

message AddEmailResponse {
  uint32 code = 1;
  string message = 2;
}

message DeleteEmailRequest {
  string email = 1;
}

message DeleteEmailResponse {
  uint32 code = 1;
  string message = 2;
}

message SendVerificationEmailRequest {
  string email = 1;
}

message SendVerificationEmailResponse {
  uint32 code = 1;
  string message = 2;
}

message VerifyEmailRequest {
  string token = 1;
}

message VerifyEmailResponse {
  uint32 code = 1;
  string message = 2;
}

message ChangePrimaryEmailRequest {
  string email = 1;
}

message ChangePrimaryEmailResponse {
  uint32 code = 1;
  string message = 2;
}

message GetPrimaryEmailRequest {}

message GetPrimaryEmailResponse {
  uint32 code = 1;
  string message = 2;
  string email = 3;
}

message GetActiveEmailsRequest {}

message GetActiveEmailsResponse {
  uint32 code = 1;
  string message = 2;
  repeated string emails = 3;
}

message ChangePhoneNumberRequest {
  string phone_number = 1;
}

message ChangePhoneNumberResponse {
  uint32 code = 1;
  string message = 2;
}

message SendVerificationSMSRequest {
  string phone_number = 1;
}

message SendVerificationSMSResponse {
  uint32 code = 1;
  string message = 2;
}

message VerifyPhoneNumberRequest {
  string token = 1;
}

message VerifyPhoneNumberResponse {
  uint32 code = 1;
  string message = 2;
}

message GetPhoneNumberRequest {}

message GetPhoneNumberResponse {
  uint32 code = 1;
  string message = 2;
  string phone_number = 3;
}

message ForgotPasswordRequest {
  string username = 1;
}

message ForgotPasswordResponse {
  uint32 code = 1;
  string message = 2;
}

message ResetPasswordRequest {
  string token = 1;
  string new_password = 2;
}

message ResetPasswordResponse {
  uint32 code = 1;
  string message = 2;
}

message DeleteUserRequest {
  string password = 1;
}

message DeleteUserResponse {
  uint32 code = 1;
  string message = 2;
}